[gd_scene load_steps=5 format=3 uid="uid://b1pg8555kpwtu"]

[ext_resource type="Script" path="res://godot-menus/options_menu.gd" id="1_rn7n7"]
[ext_resource type="Theme" uid="uid://ctr5hyax2hjen" path="res://godot-menus/menu_button_font.tres" id="3_568ox"]
[ext_resource type="PackedScene" uid="uid://cgjtym43ir1qc" path="res://godot-menus/volume_slider.tscn" id="4_arr8p"]
[ext_resource type="PackedScene" uid="uid://bw307tu2xua0m" path="res://godot-menus/checkbox_button.tscn" id="5_gsl6v"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rn7n7")
has_title = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = -41.0
offset_right = 74.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_568ox")
theme_override_font_sizes/font_size = 40
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MasterVolumeSlider" parent="VBoxContainer" instance=ExtResource("4_arr8p")]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 2
bus_name = "Master"

[node name="SFXVolumeSlider" parent="VBoxContainer" instance=ExtResource("4_arr8p")]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 2
bus_name = "SFX"

[node name="MusicVolumeSlider" parent="VBoxContainer" instance=ExtResource("4_arr8p")]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 2
bus_name = "Music"

[node name="DebugMenuButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
theme = ExtResource("3_568ox")
text = "Debug Menu: Off"

[node name="VSyncCheckBox" parent="VBoxContainer" instance=ExtResource("5_gsl6v")]
unique_name_in_owner = true
layout_mode = 2
text = " VSync"

[node name="FullscreenCheckBox" parent="VBoxContainer" instance=ExtResource("5_gsl6v")]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = " Fullscreen"

[node name="TouchControlsCheckBox" parent="VBoxContainer" instance=ExtResource("5_gsl6v")]
unique_name_in_owner = true
layout_mode = 2
text = " Touch Controls"

[node name="BackButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
theme = ExtResource("3_568ox")
text = "Back"

[node name="SFXAmbient" type="AudioStreamPlayer" parent="."]
volume_db = 4.0

[node name="SFXAction" type="AudioStreamPlayer" parent="."]
volume_db = -8.0

[connection signal="focus_entered" from="VBoxContainer/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_focus_exited"]
[connection signal="pressed" from="VBoxContainer/DebugMenuButton" to="." method="_on_debug_menu_button_pressed"]
[connection signal="toggled" from="VBoxContainer/VSyncCheckBox" to="." method="_on_v_sync_check_box_toggled"]
[connection signal="toggled" from="VBoxContainer/FullscreenCheckBox" to="." method="_on_fullscreen_check_box_toggled"]
[connection signal="toggled" from="VBoxContainer/TouchControlsCheckBox" to="." method="_on_touch_controls_check_box_toggled"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
